--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Alessandro Dal Maso</title>
   </head>
   <body>
-    <h1 id='alessandro-dal-maso'>Alessandro Dal Maso</h1>
-    <p>Medical Oncologist at Oncology 2, Veneto Institute of Oncology, IOV - IRCCS</p>
+    <h1>Alessandro Dal Maso</h1>
+    <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS</a>, Padova, Italy</p>
+    <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</p>
     <hr>
     <p><a href="cv_en.pdf">Brief CV</a></p>
   </body>
