--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1">
+    <meta name="robots" CONTENT="noindex,nofollow">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Alessandro Dal Maso</title>
+    <base target="_blank">
+    <style type="text/css">
+      body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; max-width: 1024px;}
+      h1 {font-size: 1.6em}
+      a {color: #00008B; text-decoration: none}
+      a:hover {color: black; text-decoration: none}
+      .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
+      @media (min-width: 720px) {
+        .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%;}
+      }
+      @media (max-width: 720px) {
+        .scaleImg {max-width: 40vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 5%; margin-right:5%; margin-top: 10%; margin-bottom: 10%;}
+      }
+      @media print {
+        .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%;}
+      }
+    </style>
   </head>
   <body>
-    <img src="adm.jpg" style="width: 10%">
-    <h1>Alessandro Dal Maso</h1>
-    <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS</a>, Padova, Italy</p>
-    <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</p>
-    <hr>
-    <p><a href="cv_en.pdf">Brief CV</a></p>
-    <hr>
+      <img src="adm.jpg" class="scaleImg">
+      <h1>Alessandro Dal Maso</h1>
+      <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
+      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology 
+        at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
+      <div class="border">
+        <p><a href="cv_en.pdf">Brief CV</a></p>
+        <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">ORCID</a>,
+          <a href="https://publons.com/researcher/4216114/alessandro-dal-maso/">Web of Science</a>,
+          <a href="https://www.scopus.com/authid/detail.uri?authorId=57204191503">Scopus</a>
+        </p>
+      </div>
   </body>
 </html>
