--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width initial-scale=1'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="robots" CONTENT="noindex,nofollow">
     <title>Alessandro Dal Maso</title>
   </head>
-  <body>
+  <body style="font-family: sans-serif">
     <img src="adm.jpg" style="width: 20vw">
     <h1>Alessandro Dal Maso</h1>
     <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS</a>, Padova, Italy</p>
