--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="robots" CONTENT="noindex,nofollow">
     <title>Alessandro Dal Maso</title>
+    <style type="text/css">
+      body {font-family: sans-serif}
+      a {color: #00008B; text-decoration: none}
+    </style>
   </head>
-  <body style="font-family: sans-serif">
+  <body style="font-family: sans-serif;">
     <img src="adm.jpg" style="width: 20vw">
     <h1>Alessandro Dal Maso</h1>
-    <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS</a>, Padova, Italy</p>
-    <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</p>
+    <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
+    <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
     <hr>
     <p><a href="cv_en.pdf">Brief CV</a></p>
     <hr>
