--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       a {color: #00008B; text-decoration: none}
     </style>
   </head>
-  <body style="font-family: sans-serif;">
+  <body>
     <img src="adm.jpg" style="width: 20vw">
     <h1>Alessandro Dal Maso</h1>
     <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it">Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
