--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <img src="adm.jpg" style="width: 20vw">
     <h1>Alessandro Dal Maso</h1>
-    <p>Medical Oncologist at Oncology 2, <a href="https://www.ioveneto.it" target="_blank">Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
+    <p>Medical Oncologist at <a href="https://www.ioveneto.it" target="_blank">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
     <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca" target="_blank">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
     <hr>
     <p><a href="cv_en.pdf" target="_blank">Brief CV</a></p>
