--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       }
       h1 {font-size: $base-font-size*1.6em}
       a {color: #00008B; text-decoration: none}
-      .container {margin: 0 auto; max-width: 1024px;}
-      .container {margin: 0 4%;
+      .container {margin: 0 4%; max-width: 1024px;
         @media #{$mq-medium} {margin: 0 8%;}
         @media #{$mq-large} {margin: 0 12%;}
         @media #{$mq-xlarge} {margin: 0 18%;}
