--- a/index.html
+++ b/index.html
@@ -9,33 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Alessandro Dal Maso</title>
     <style type="text/css">
-      $bp-small: 48em; // 768px
-      $bp-medium: 64em; // 1024px
-      $bp-large: 85.375em; // 1366px
-      $bp-xlarge: 120em; // 1920px
-      $bp-xxlarge: 160em; // 2560px
-      $mq-small: "(min-width: #{$bp-small})";
-      $mq-medium: "(min-width: #{$bp-medium})";
-      $mq-large: "(min-width: #{$bp-large})";
-      $mq-xlarge: "(min-width: #{$bp-xlarge})";
-      $mq-xxlarge: "(min-width: #{$bp-xxlarge})";
-      $mq-retina: "(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
-      $base-font-size: 1em;
-      $base-line-height: 1.5;
-      $header-line-height: 1.25;
-      body {font-family: 'IBM Plex Sans', sans-serif; font-size: $base-font-size; line-height: $base-line-height;
-        @media #{$mq-medium} {font-size: $base-font-size*1.2; line-height: $base-line-height*1.2;}
-        @media #{$mq-large} {font-size: $base-font-size*1.3;}
-        @media #{$mq-xlarge} {font-size: $base-font-size*1.4;}
-        @media #{$mq-xxlarge} {font-size: $base-font-size*1.6;}
-      }
-      h1 {font-size: $base-font-size*1.6em}
+      body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em}
+      h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
-      .container {margin: 0 4%; max-width: 1024px;
-        @media #{$mq-medium} {margin: 0 8%;}
-        @media #{$mq-large} {margin: 0 12%;}
-        @media #{$mq-xlarge} {margin: 0 18%;}
-      }
+      .container {margin: 0 4%; max-width: 1024px;}
     </style>
   </head>
   <body>
