--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
-      .container {margin: 0 4%; max-width: 1024px;}
+      .container {margin: 10vw; max-width: 1024px;}
     </style>
   </head>
   <body>
