--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Alessandro Dal Maso</title>
     <style type="text/css">
-      body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em}
+      body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em; margin: 10%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
-      .container {margin: 10%; max-width: 1024px;}
     </style>
   </head>
   <body>
-    <div id="container">
       <img src="adm.jpg" style="width: 20vw">
       <h1>Alessandro Dal Maso</h1>
       <p>Medical Oncologist at <a href="https://www.ioveneto.it" target="_blank">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
@@ -24,6 +22,5 @@
       <hr>
       <p><a href="cv_en.pdf" target="_blank">Brief CV</a></p>
       <hr>
-    </div>
   </body>
 </html>
