--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Alessandro Dal Maso</title>
     <style type="text/css">
-      body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em; margin: 10%; margin-top: 5%; max-width: 1024px;}
+      body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
     </style>
