--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {font-family: 'IBM Plex Sans', sans-serif; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
+      hr {background-color:#000000; border:none; height:1pt; margin:0px;}
     </style>
   </head>
   <body>
