--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
-      hr {border-top: 1px solid black}
+      hr {border-top: 1pt solid black; border-bottom: 0px; border-left: 0px; border-right: 0px;}
     </style>
   </head>
   <body>
