--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
-      hr {border-top: 1pt solid black; border-bottom: 0px; border-left: 0px; border-right: 0px;}
+      .border {border-top: 1pt solid black; border-bottom: 1pt solid black; padding-top: 1em; padding-bottom: 1em;}
     </style>
   </head>
   <body>
@@ -20,8 +20,8 @@
       <h1>Alessandro Dal Maso</h1>
       <p>Medical Oncologist at <a href="https://www.ioveneto.it" target="_blank">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
       <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca" target="_blank">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
-      <hr>
-      <p><a href="cv_en.pdf" target="_blank">Brief CV</a></p>
-      <hr>
+      <div class="border">
+        <p><a href="cv_en.pdf" target="_blank">Brief CV</a></p>
+      </div>
   </body>
 </html>
