--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
+      a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black; padding-top: 1em; padding-bottom: 1em;}
     </style>
   </head>
