--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
-      .border {border-top: 1pt solid black; border-bottom: 1pt solid black; padding-top: 1em; padding-bottom: 1em;}
+      .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
     </style>
   </head>
   <body>
