--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-      <img src="adm.jpg">
+      <img src="adm.jpg" class="scaleImg">
       <h1>Alessandro Dal Maso</h1>
       <p>Medical Oncologist at <a href="https://www.ioveneto.it" target="_blank">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
       <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca" target="_blank">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
