--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
-      .scaleImg {max-width: 30%; height: auto; width: auto\9; /* ie8 */}
+      .scaleImg {min-width: 25%; max-width: 35%; height: auto; width: auto\9; /* ie8 */}
     </style>
   </head>
   <body>
