--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap" rel="stylesheet">
     <title>Alessandro Dal Maso</title>
+    <base target="_blank">
     <style type="text/css">
       body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
       h1 {font-size: 1.6em}
@@ -21,10 +22,14 @@
   <body>
       <img src="adm.jpg" class="scaleImg">
       <h1>Alessandro Dal Maso</h1>
-      <p>Medical Oncologist at <a href="https://www.ioveneto.it" target="_blank">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
-      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca" target="_blank">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
+      <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV - IRCCS, Padova, Italy</a></p>
+      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
       <div class="border">
-        <p><a href="cv_en.pdf" target="_blank">Brief CV</a></p>
+        <p><a href="cv_en.pdf">Brief CV</a></p>
+        <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">OrcID</a>,
+          <a href="https://publons.com/researcher/4216114/alessandro-dal-maso/">Web of Science</a>,
+          <a href="https://www.scopus.com/authid/detail.uri?authorId=57204191503">Scopus</a>
+        </p>
       </div>
   </body>
 </html>
