--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
       <div class="border">
         <p><a href="cv_en.pdf">Brief CV</a></p>
-        <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">OrcID</a>,
+        <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">ORCID</a>,
           <a href="https://publons.com/researcher/4216114/alessandro-dal-maso/">Web of Science</a>,
           <a href="https://www.scopus.com/authid/detail.uri?authorId=57204191503">Scopus</a>
         </p>
