--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
       @media (min-width: 720px) {.scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}}
       @media (max-width: 720px) {.scaleImg {max-width: 40vw; height: auto; width: auto\9; /* ie8 */}}
+      @media print {.scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}}
     </style>
   </head>
   <body>
