--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
     <title>Alessandro Dal Maso</title>
     <base target="_blank">
     <style type="text/css">
-      body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%; max-width: 1024px;}
+      body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
-      @media (min-width: 720px) {.scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}}
-      @media (max-width: 720px) {.scaleImg {max-width: 40vw; height: auto; width: auto\9; /* ie8 */}}
-      @media print {.scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}}
+      @media (min-width: 720px) {
+        .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%;}
+      }
+      @media (max-width: 720px) {
+        .scaleImg {max-width: 40vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 5%; margin-right:5%; margin-top: 10%; margin-bottom: 10%;}
+      }
+      @media print {
+        .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
+        body {margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%;}
+      }
     </style>
   </head>
   <body>
