--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Alessandro Dal Maso</title>
     <base target="_blank">
     <style type="text/css">
-      body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02" 1; font-size:1em; max-width: 1024px;}
+      body {font-family: "IBM Plex Sans", sans-serif; font-feature-settings: "ss02"; font-size:1em; max-width: 1024px;}
       h1 {font-size: 1.6em}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
