--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
       <img src="adm.jpg" class="scaleImg">
       <h1>Alessandro Dal Maso</h1>
       <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
-      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology 
-        at Department of Surgery, Oncology and Gastroenterology, University of Padova, Padova, Italy</a></p>
+      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
+        at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
+        <a href="https://www.unipd.it/">University of Padova, Padova, Italy</a>
+      </p>
       <div class="border">
         <p><a href="cv_en.pdf">Brief CV</a></p>
         <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">ORCID</a>,
