--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         font-style: normal;
       }
       body {font-family: "CallunaSansRegular", sans-serif; font-size:1em; max-width: 1024px;}
-      h1 {font-size: 1.6em; font-variant: small-caps}
+      h1 {font-size: 1em; font-weight: normal}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
