--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         font-style: normal;
       }
       body {font-family: "CallunaSansRegular", sans-serif; font-size:1em; max-width: 1024px;}
-      h1 {font-size: 1em; font-weight: normal}
+      h1 {font-size: 1.6em; font-weight: normal}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
@@ -35,7 +35,7 @@
   </head>
   <body>
       <img src="adm.jpg" class="scaleImg">
-      <h1>Alessandro Dal Maso</h1>
+      <h1>Alessandro Dal Maso, MD</h1>
       <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
       <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
         at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
