--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
+      .borderbottom {border-bottom: 1pt solid black;}
+      .bordertop {border-top: 1pt solid black}
       @media (min-width: 720px) {
         .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
         body {margin-left: 10%; margin-right:10%; margin-top: 5%; margin-bottom: 5%;}
@@ -36,15 +38,17 @@
   <body>
       <img src="adm.jpg" class="scaleImg">
       <h1>Alessandro Dal Maso, MD</h1>
-      <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
-      <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
-        at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
-        <a href="https://www.unipd.it/">University of Padova, Padova, Italy</a>
-      </p>
       <div class="border">
+        <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
+        <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
+          at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
+          <a href="https://www.unipd.it/">University of Padova, Padova, Italy</a>
+        </p>
+      </div>
+      <div class="borderbottom">
         <p><a href="cv_en.pdf">Brief CV</a></p>
         <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">ORCID</a>,
-          <a href="https://publons.com/researcher/4216114/alessandro-dal-maso/">Web of Science</a>,
+          <a href="https://www.webofscience.com/wos/author/rid/AAD-6434-2021">Web of Science</a>,
           <a href="https://www.scopus.com/authid/detail.uri?authorId=57204191503">Scopus</a>
         </p>
       </div>
