--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
   </head>
   <body>
       <img src="adm.jpg" class="scaleImg">
-      <h1>Alessandro Dal Maso, MD</h1>
-      <div class="border">
+      <div class="borderbottom">
+        <h1>Alessandro Dal Maso, MD</h1>
+      </div>
+      <div class="borderbttom">
         <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
         <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
           at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
