--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         font-weight: normal;
         font-style: normal;
       }
+      /* A font by Jos Buivenga (exljbris) -> www.exljbris.com */
       body {font-family: "CallunaSansRegular", sans-serif; font-size:1em; max-width: 1024px;}
       h1 {font-size: 1em; font-weight: normal}
       a {color: #00008B; text-decoration: none}
