--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
       /* A font by Jos Buivenga (exljbris) -> www.exljbris.com */
       body {font-family: "CallunaSansRegular", sans-serif; font-size:1em; max-width: 1024px;}
-      h1 {font-size: 1em; font-weight: normal}
+      h1 {font-size: 1em; font-weight: normal; padding-bottom: 0.5em;}
       a {color: #00008B; text-decoration: none}
       a:hover {color: black; text-decoration: none}
       .border {border-top: 1pt solid black; border-bottom: 1pt solid black;}
