--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h1>Alessandro Dal Maso, MD</h1>
       </div>
       <div class="borderbottom">
-        <p>Medical Oncologist at <a href="https://www.ioveneto.it">Oncology 2, Veneto Institute of Oncology, IOV – IRCCS, Padova, Italy</a></p>
+        <p>Medical Oncologist at <a href="https://www.ioveneto.it">Medical Oncology 2, Veneto Institute of Oncology IOV – IRCCS, Padova, Italy</a></p>
         <p>PhD Student in <a href="https://www.discog.unipd.it/doctorate/dottorati-di-ricerca">Clinical and Experimental Oncology and Immunology</a> 
           at <a href="https://discog.unipd.it/">Department of Surgery, Oncology and Gastroenterology</a>,
           <a href="https://www.unipd.it/">University of Padova, Padova, Italy</a>
