--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
       @media (prefers-color-scheme: dark) {
         body {color: white; background-color: black}
-        a {color: #8B8B00; text-decoration: none}
+        a {color: #AFA8BA; text-decoration: none}
         a:hover {color: white; text-decoration: none}
         .border {border-top: 1pt solid white; border-bottom: 1pt solid white;}
         .borderbottom {border-bottom: 1pt solid white}
