--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       }      
       body {font-family: "CallunaSansRegular", sans-serif; font-size:1em; max-width: 1024px;}
       h1 {font-size: 1em; font-weight: normal; padding-bottom: 0.5em;}
+      img {filter: grayscale(1)}
       @media (prefers-color-scheme: light) {
         body {color: black; background-color: white}
         a {color: #00008B; text-decoration: none}
