--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         .border {border-top: 1pt solid white; border-bottom: 1pt solid white;}
         .borderbottom {border-bottom: 1pt solid white}
         .bordertop {border-top: 1pt solid white}
-        img {filter: brightness(.8) contrast(.8);}
+        img {filter: brightness(.8) contrast(.8) grayscale(1)}
       }
       @media (min-width: 720px) {
         .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
