--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
   </head>
   <body>
-      <img src="adm.jpg" class="scaleImg">
+      <!-- <img src="adm.jpg" class="scaleImg"> -->
       <div class="borderbottom">
         <h1>Alessandro Dal Maso, MD</h1>
       </div>
