--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
       </div>
       <div class="borderbottom">
-        <p><a href="cv_en.pdf">CV</a></p>
+        <p><a href="cv_en.pdf">CV</a>, <a href="short_cv_en.pdf">short CV</a></p>
         <p>List of publications: <a href="https://orcid.org/0000-0003-3743-717X">ORCID</a>,
           <a href="https://www.webofscience.com/wos/author/rid/AAD-6434-2021">Web of Science</a>,
           <a href="https://www.scopus.com/authid/detail.uri?authorId=57204191503">Scopus</a>
