--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       }
       @media (max-width: 720px) {
         .scaleImg {max-width: 40vw; height: auto; width: auto\9; /* ie8 */}
-        body {margin-left: 5%; margin-right:5%; margin-top: 10%; margin-bottom: 10%;}
+        body {max-width: 70vw; margin-left: 5%; margin-right:5%; margin-top: 10%; margin-bottom: 10%;}
       }
       @media print {
         .scaleImg {max-width: 20vw; height: auto; width: auto\9; /* ie8 */}
